stack/binoue-network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  Ec2ImageId:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
      - Key: Name
        Value: inoue-vpc
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: inoue-igw
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  FrontendRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: inoue-route
  FrontendRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref FrontendRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  FrontendSubnet:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: us-west-2a
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: inoue-public-1
  FrontendSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref FrontendSubnet
      RouteTableId: !Ref FrontendRouteTable
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: 
    - VPC
    - IAMPolicy
    Properties: 
      GroupDescription: "inoue handson sample"
      GroupName: "inoue-ap-sg"
      SecurityGroupEgress: 
        - CidrIp: 0.0.0.0/0
          IpProtocol: -1
      SecurityGroupIngress:
        - CidrIp: 103.79.12.129/32
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIp: 103.79.12.129/32
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 113.147.91.142/32
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIp: 113.147.91.142/32
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
      Tags: 
        - Key: Name
          Value: inoue-ap-sg
      VpcId: !Ref VPC
  EC2:
    Type: AWS::EC2::Instance
    DependsOn: SecurityGroup
    Properties: 
      AvailabilityZone: us-west-2a
      InstanceType: "t2.micro"
      KeyName: inoue
      ImageId: !Ref Ec2ImageId
      SecurityGroupIds: 
      - !Ref SecurityGroup
      SubnetId: !Ref FrontendSubnet
      Tags:
      - Key: Name
        Value: inoue-ap
      UserData: "IyEvYmluL2Jhc2gKeXVtIHVwZGF0ZSAteQp5dW0gaW5zdGFsbCBodHRwZCAteQpzZXJ2aWNlIGh0dHBkIHN0YXJ0CmNoa2NvbmZpZyBodHRwZCBvbgo="
      IamInstanceProfile: 
        Name: AccessS3bucket
  IAMPolicy:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyName: AccessS3bucket
      DependsOn: S3
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - 's3:ListBucket'
            Resource: 'arn:aws:s3:::inoue--artifacts'
          - Effect: Allow
            Action:
              - 's3:PutObject'
              - 's3:GetObject'
              - 's3:DeleteObject'
            Resource: 'arn:aws:s3:::inoue--artifacts/*'
      # Groups:
      #   - !Ref CFNUserGroup
  S3:
    Type: AWS::S3::Bucket
    Properties: 
      BucketName: inoue--artifacts
